# indic-qa-eval

./: .env.example  .gitignore  LICENSE  README.md  config.py  evaluate.py  main.py  pyproject.toml  requirements.txt
data/: qa_test_human_200.csv
prompts/: __init__.py  five_shot.py  one_shot.py  rag_prompt.py  three_shot.py  zero_shot.py
