[project]
name = "ich-qa-eval"
version = "0.1.0"
description = "Evaluation framework for Question Answering on Indian Culture & Heritage datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.30.0",
    "bert-score>=0.3.13",
    "groq>=0.4.0",
    "nltk>=3.9.2",
    "numpy>=1.26.0",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.8.0",
    "together>=2.1.1",
]
