[project]
name = "ich-qa-eval"
version = "1.0.0"
description = "Evaluation framework for Question Answering on Indian Culture & Heritage datasets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Shivam"},
]
keywords = ["nlp", "evaluation", "question-answering", "benchmarking", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.30.0",
    "bert-score>=0.3.13",
    "groq>=0.4.0",
    "nltk>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.3.0",
    "together>=1.0.0",
]
